[package]
name = "bisect"
version = "0.1.0"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["console_error_panic_hook", "wasm-bindgen"]

[dependencies]
meval = "0.2"
fraction = "0.6.3"
wasm-bindgen = { version = "0.2.68", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }